@@ -35,97 +35,100 @@ def load_tests(basic_tests, module, loader):
     # add the tests for this module
     suite.addTests(basic_tests)
 
+    prefix = 'bzrlib.tests.blackbox.'
     testmod_names = [
-                     'bzrlib.tests.blackbox.test_add',
-                     'bzrlib.tests.blackbox.test_added',
-                     'bzrlib.tests.blackbox.test_alias',
-                     'bzrlib.tests.blackbox.test_aliases',
-                     'bzrlib.tests.blackbox.test_ancestry',
-                     'bzrlib.tests.blackbox.test_annotate',
-                     'bzrlib.tests.blackbox.test_branch',
-                     'bzrlib.tests.blackbox.test_break_lock',
-                     'bzrlib.tests.blackbox.test_breakin',
-                     'bzrlib.tests.blackbox.test_bound_branches',
-                     'bzrlib.tests.blackbox.test_bundle_info',
-                     'bzrlib.tests.blackbox.test_cat',
-                     'bzrlib.tests.blackbox.test_cat_revision',
-                     'bzrlib.tests.blackbox.test_check',
-                     'bzrlib.tests.blackbox.test_checkout',
-                     'bzrlib.tests.blackbox.test_clean_tree',
-                     'bzrlib.tests.blackbox.test_command_encoding',
-                     'bzrlib.tests.blackbox.test_commit',
-                     'bzrlib.tests.blackbox.test_conflicts',
-                     'bzrlib.tests.blackbox.test_debug',
-                     'bzrlib.tests.blackbox.test_deleted',
-                     'bzrlib.tests.blackbox.test_diff',
-                     'bzrlib.tests.blackbox.test_dump_btree',
-                     'bzrlib.tests.blackbox.test_dpush',
-                     'bzrlib.tests.blackbox.test_exceptions',
-                     'bzrlib.tests.blackbox.test_export',
-                     'bzrlib.tests.blackbox.test_filesystem_cicp',
-                     'bzrlib.tests.blackbox.test_filtered_view_ops',
-                     'bzrlib.tests.blackbox.test_find_merge_base',
-                     'bzrlib.tests.blackbox.test_help',
-                     'bzrlib.tests.blackbox.test_hooks',
-                     'bzrlib.tests.blackbox.test_ignore',
-                     'bzrlib.tests.blackbox.test_ignored',
-                     'bzrlib.tests.blackbox.test_info',
-                     'bzrlib.tests.blackbox.test_init',
-                     'bzrlib.tests.blackbox.test_inventory',
-                     'bzrlib.tests.blackbox.test_join',
-                     'bzrlib.tests.blackbox.test_locale',
-                     'bzrlib.tests.blackbox.test_log',
-                     'bzrlib.tests.blackbox.test_logformats',
-                     'bzrlib.tests.blackbox.test_lookup_revision',
-                     'bzrlib.tests.blackbox.test_ls',
-                     'bzrlib.tests.blackbox.test_lsprof',
-                     'bzrlib.tests.blackbox.test_merge',
-                     'bzrlib.tests.blackbox.test_merge_directive',
-                     'bzrlib.tests.blackbox.test_missing',
-                     'bzrlib.tests.blackbox.test_modified',
-                     'bzrlib.tests.blackbox.test_mv',
-                     'bzrlib.tests.blackbox.test_nick',
-                     'bzrlib.tests.blackbox.test_non_ascii',
-                     'bzrlib.tests.blackbox.test_outside_wt',
-                     'bzrlib.tests.blackbox.test_pack',
-                     'bzrlib.tests.blackbox.test_pull',
-                     'bzrlib.tests.blackbox.test_push',
-                     'bzrlib.tests.blackbox.test_reconcile',
-                     'bzrlib.tests.blackbox.test_reconfigure',
-                     'bzrlib.tests.blackbox.test_reference',
-                     'bzrlib.tests.blackbox.test_remerge',
-                     'bzrlib.tests.blackbox.test_remove',
-                     'bzrlib.tests.blackbox.test_re_sign',
-                     'bzrlib.tests.blackbox.test_remove_tree',
-                     'bzrlib.tests.blackbox.test_revert',
-                     'bzrlib.tests.blackbox.test_revno',
-                     'bzrlib.tests.blackbox.test_revision_history',
-                     'bzrlib.tests.blackbox.test_revision_info',
-                     'bzrlib.tests.blackbox.test_rmbranch',
-                     'bzrlib.tests.blackbox.test_selftest',
-                     'bzrlib.tests.blackbox.test_send',
-                     'bzrlib.tests.blackbox.test_serve',
-                     'bzrlib.tests.blackbox.test_shared_repository',
-                     'bzrlib.tests.blackbox.test_shelve',
-                     'bzrlib.tests.blackbox.test_sign_my_commits',
-                     'bzrlib.tests.blackbox.test_split',
-                     'bzrlib.tests.blackbox.test_status',
-                     'bzrlib.tests.blackbox.test_switch',
-                     'bzrlib.tests.blackbox.test_tags',
-                     'bzrlib.tests.blackbox.test_testament',
-                     'bzrlib.tests.blackbox.test_too_much',
-                     'bzrlib.tests.blackbox.test_uncommit',
-                     'bzrlib.tests.blackbox.test_unknowns',
-                     'bzrlib.tests.blackbox.test_update',
-                     'bzrlib.tests.blackbox.test_upgrade',
-                     'bzrlib.tests.blackbox.test_version',
-                     'bzrlib.tests.blackbox.test_version_info',
-                     'bzrlib.tests.blackbox.test_versioning',
-                     'bzrlib.tests.blackbox.test_view',
-                     'bzrlib.tests.blackbox.test_whoami',
+                     'test_add',
+                     'test_added',
+                     'test_alias',
+                     'test_aliases',
+                     'test_ancestry',
+                     'test_annotate',
+                     'test_branch',
+                     'test_break_lock',
+                     'test_breakin',
+                     'test_bound_branches',
+                     'test_bundle_info',
+                     'test_cat',
+                     'test_cat_revision',
+                     'test_check',
+                     'test_checkout',
+                     'test_clean_tree',
+                     'test_command_encoding',
+                     'test_commit',
+                     'test_conflicts',
+                     'test_debug',
+                     'test_deleted',
+                     'test_diff',
+                     'test_dump_btree',
+                     'test_dpush',
+                     'test_exceptions',
+                     'test_export',
+                     'test_filesystem_cicp',
+                     'test_filtered_view_ops',
+                     'test_find_merge_base',
+                     'test_help',
+                     'test_hooks',
+                     'test_ignore',
+                     'test_ignored',
+                     'test_info',
+                     'test_init',
+                     'test_inventory',
+                     'test_join',
+                     'test_locale',
+                     'test_log',
+                     'test_logformats',
+                     'test_lookup_revision',
+                     'test_ls',
+                     'test_lsprof',
+                     'test_merge',
+                     'test_merge_directive',
+                     'test_missing',
+                     'test_modified',
+                     'test_mv',
+                     'test_nick',
+                     'test_non_ascii',
+                     'test_outside_wt',
+                     'test_pack',
+                     'test_pull',
+                     'test_push',
+                     'test_reconcile',
+                     'test_reconfigure',
+                     'test_reference',
+                     'test_remerge',
+                     'test_remove',
+                     'test_re_sign',
+                     'test_remove_tree',
+                     'test_revert',
+                     'test_revno',
+                     'test_revision_history',
+                     'test_revision_info',
+                     'test_rmbranch',
+                     'test_script',
+                     'test_selftest',
+                     'test_send',
+                     'test_serve',
+                     'test_shared_repository',
+                     'test_shelve',
+                     'test_sign_my_commits',
+                     'test_split',
+                     'test_status',
+                     'test_switch',
+                     'test_tags',
+                     'test_testament',
+                     'test_too_much',
+                     'test_uncommit',
+                     'test_unknowns',
+                     'test_update',
+                     'test_upgrade',
+                     'test_version',
+                     'test_version_info',
+                     'test_versioning',
+                     'test_view',
+                     'test_whoami',
                      ]
     # add the tests for the sub modules
-    suite.addTests(loader.loadTestsFromModuleNames(testmod_names))
+    suite.addTests(loader.loadTestsFromModuleNames(
+            [prefix + module_name for module_name in testmod_names]))
     return suite
 
 
